--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <input type="number" placeholder="Extras" id="extras" value="">
         <input type="number" placeholder="Tasa anual" id="tasa" value="">
         <input type="number" placeholder="Tiempo" id="años" value=""><br>
-        <button id="boton">CALCULAR</button>
+        <button id="boton">CALCULAR</button><br>
+        <label for="" id="label"></label>
+
        
     </div>
     <script src="calculos.js"></script>
