--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="number" placeholder="Depositos m" id="depMens" value="">
         <input type="number" placeholder="Extras" id="extras" value="">
         <input type="number" placeholder="Tasa anual" id="tasa" value="">
-        <input type="number" placeholder="Tiempo" id="años" value=""><br>
+        <input type="number" placeholder="Años" id="años" value=""><br>
         <button id="boton">CALCULAR</button><br>
         <label for="" id="label"></label>
 
